tests/good/if_condition1.nx
// avaliar um inteiro declarado com `if`

var x : int = 1;
var y : int = -1;

if (x > 0) then {print(x);}
           else {print(y);}

print(y);

// Resultado: 1