tests/bad/if2.nx
// se 'else' for obrigatorio

var x : int = 3;

if (x < 5){
    x := 3;
}
